--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ Requirements
 [  ] Custom Function #1 - Called Multiple Times
 [  ] Custom Function #2 - Takes Parameters
 [  ] Custom Function #3
-[  ] Three new HTML elements/CSS Declarations
+[ yes ] Three new HTML elements/CSS Declarations
 
 Select ONE Additional 
 [ no ] Feature 1 - Include mouseX and mouseY
