--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!-- Unit 8 Project
 Requirements
-[  ] Custom Function #1 - Called Multiple Times
-[  ] Custom Function #2 - Takes Parameters
-[  ] Custom Function #3
+[ yes ] Custom Function #1 - Called Multiple Times
+[ yes ] Custom Function #2 - Takes Parameters
+[ yes ] Custom Function #3
 [ yes ] Three new HTML elements/CSS Declarations
 
 Select ONE Additional 
